--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.character-thumbnail {
+  width: 100px;
+  height: 100px;
 }
 
 .App-logo {
